# docs/swagger.yaml
@@ -155,6 +155,66 @@ definitions:
       total_pages:
         type: integer
     type: object
+  github_com_TrinityKnights_Backend_internal_domain_model.PaymentCallbackRequest:
+    properties:
+      amount:
+        type: integer
+      created:
+        type: string
+      currency:
+        type: string
+      description:
+        type: string
+      external_id:
+        type: string
+      id:
+        type: string
+      is_high:
+        type: boolean
+      merchant_name:
+        type: string
+      paid_amount:
+        type: integer
+      paid_at:
+        type: string
+      payer_email:
+        type: string
+      payment_channel:
+        type: string
+      payment_destination:
+        type: string
+      payment_method:
+        type: string
+      status:
+        type: string
+      updated:
+        type: string
+      user_id:
+        type: string
+    required:
+    - amount
+    - created
+    - currency
+    - description
+    - external_id
+    - id
+    - is_high
+    - merchant_name
+    - paid_amount
+    - paid_at
+    - payer_email
+    - payment_channel
+    - payment_destination
+    - payment_method
+    - status
+    - updated
+    - user_id
+    type: object
+  github_com_TrinityKnights_Backend_internal_domain_model.PaymentCallbackResponse:
+    properties:
+      status:
+        type: string
+    type: object
   github_com_TrinityKnights_Backend_internal_domain_model.PaymentResponse:
     properties:
       amount:
@@ -744,6 +804,36 @@ paths:
       summary: Get order by ID
       tags:
       - orders
+  /payment/callback:
+    post:
+      consumes:
+      - application/json
+      description: Callback Payment
+      parameters:
+      - description: Payment Callback Request
+        in: body
+        name: payment
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.PaymentCallbackRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.PaymentCallbackResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Error'
+      summary: Callback Payment
+      tags:
+      - Payment
   /tickets:
     get:
       description: Get a paginated list of all tickets
